--- a/news.html
+++ b/news.html
@@ -9,10 +9,97 @@
     <title>index</title>
     <link type="text/css" rel="stylesheet" href="style/reset.css">
     <link type="text/css" rel="stylesheet" href="style/main.css">
+    <link type="text/css" rel="stylesheet" href="style/news.css">
     <script src="./dist/js/bootstrap.js"></script>
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3 col-md-offset-1" style="padding:10px 20px;font-family: PingFangTC-Light;font-size: 14px;color: #264863;">
+                <!--<a claas="text-left">欢迎！</a>-->
+                欢迎！
+                <span class="glyphicon glyphicon-user"></span>
+                <a claas="text-left " >噜啦噜啦蹦擦擦</a>
+            </div>
+            <div class="col-md-2 col-md-offset-5" >
+                <button type="button" class="btn btn-link text-right btn-primary">Settings</button>
+                <button type="button" class="btn btn-link text-right btn-primary">Log out</button>
+            </div>
+        </div>
+        <div class="row" style="background-color:#a0daff;height=160px;">
+            <div class="col-md-2 col-md-offset-2" >
+                <img src="./image/Finance.png" class="img-responsive" style="margin:10px 0px 0px;" width="150" height="150">
+            </div>
+            <div class="col-md-3" style="padding-top:100px;font-family: PingFangTC-Medium;font-size: 30px;color: #0E5F92;">
+                您身边的智能投顾平台
+            </div>
+            <div class="col-md-4 nav" style="padding-top:110px;padding-right:70px;">
+                <button type="button" class="btn btn-link  nav" >FOF</button>
+                <button type="button" class="btn btn-link  nav" >NEWS</button>
+                <button type="button" class="btn btn-link  nav" >ABOUT</button>
+                <button type="button" class="btn btn-link  nav" >CONTACT</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <ol class="breadcrumb" style="background: transparent;">
+                    <li><a href="#" style="color:#264863;text-decoration: underline">Home</a></li>
+                    <li><a href="#" style="color:#959595">News</a></li>
+                    <li class="active"></li>
+                </ol>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4" style="background:#00dab9;border:solid white 5px;">
+                <img src="./image/icon/icon4.png" class="img-responsive" width="80%" >
+            </div>
+            <div class="col-md-4" style="background:#CBAD8B;border:solid white 5px;">
+                <img src="./image/icon/icon10.png" class="img-responsive" width="80%" >
+            </div>
+            <div class="col-md-4" style="background:#50C0EA;border:solid white 5px;">
+                <img src="./image/icon/icon9.png" class="img-responsive" width="80%" >
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4" style="background:#ffb211;border:solid white 5px;">
+                <img src="./image/icon/icon11.png" class="img-responsive" width="80%" >
+            </div>
+            <div class="col-md-8" style="background:#F47E54;border:solid white 5px;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="./image/icon/icon5.png" class="img-responsive" width="80%" >
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8" style="background:#a3cda5;border:solid white 5px;">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="./image/icon/icon6.png" class="img-responsive" width="80%" >
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4" style="background:#b6d4d0;border:solid white 5px;">
+                <img src="./image/icon/icon7.png" class="img-responsive" width="80%" >
+            </div>
+        </div>
+    </div>
 
 
 </body>
+<footer>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 col-md-offset-0" style="background: #264863;font-family: PingFangTC-Medium;font-size: 12px;color: #FFFFFF;text-align: center;">
+                <br><br>
+                Copyright jyzhang
+                <br><br>
+
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
