--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="./dist/js/bootstrap.js"></script>
 
 </head>
-
+<body >
     <div class="container-fluid ">
         <div class="row background" >
             <div class="col-md-7 col-md-offset-5">
@@ -82,48 +82,15 @@
                         </div>
                 </div>
 
-                <!--=========-->
-                <!--<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">开始演示模态框</button>-->
-                <!--&lt;!&ndash; 模态框（Modal） &ndash;&gt;-->
-                <!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">-->
-                    <!--<div class="modal-dialog">-->
-                        <!--<div class="modal-content">-->
-                            <!--<div class="modal-header">-->
-                                <!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>-->
-                                <!--<h4 class="modal-title" id="myModalLabel">登录</h4>-->
-                            <!--</div>-->
-                            <!--<div class="modal-body">在这里添加一些文本</div>-->
-                            <!--<div class="modal-footer">-->
-                                <!--<button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>-->
-                                <!--<button type="button" class="btn btn-primary">提交更改</button>-->
-                            <!--</div>-->
-                        <!--</div>&lt;!&ndash; /.modal-content &ndash;&gt;-->
-                    <!--</div>&lt;!&ndash; /.modal &ndash;&gt;-->
-                <!--</div>-->
-                <!--==========-->
-
                 <div class="row ">
                         <div class="col-md-6 col-md-offset-4  nav">
                             <br>
                             <br>
                             <button type="button" class="btn btn-link  nav" >FOF</button>
                             <button type="button" class="btn btn-link  nav" >NEWS</button>
-                            <button type="button" class="btn btn-link  nav" >ABOUT</button>
-                            <button type="button" class="btn btn-link  nav" >CONTACT</button>
-                            <!--<div class="row nav" style="text-align: right" style="padding-left:200px;">-->
-                                <!--<div class="col-md-2" style="padding-right:30px;">-->
-                                    <!--<button type="button" class="btn btn-link text-right nav" >FOF</button>-->
-                                <!--</div>-->
-                                <!--<div class="col-md-3" >-->
-                                    <!--<button type="button" class="btn btn-link text-right nav">NEWS</button>-->
-                                <!--</div>-->
-                                <!--<div class="col-md-3" >-->
-                                    <!--<button type="button" class="btn btn-link text-right nav">ABOUT</button>-->
-                                <!--</div>-->
-                                <!--<div class="col-md-3">-->
-                                    <!--<button type="button" class="btn btn-link text-right nav">CONTACT</button>-->
-                                <!--</div>-->
-                            <!--</div>-->
+                            <button href="#about" type="button" class="btn btn-link  nav" >ABOUT</button>
+                            <button href="#contact" type="button" class="btn btn-link  nav" >CONTACT</button>
+
                         </div>
                 </div>
                 <div class="row">
@@ -155,18 +122,18 @@
 
     <div class="container">
         <div class="row">
-            <br><br><br><br>
+            <br><br><br>
         </div>
     </div>
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-5 col-md-offset-1" id="card1" >
-                <div class="row">
-                    <div class="col-md-4 content1">
+            <div class="col-md-5 col-md-offset-1" >
+                <div class="row" style="margin:30px">
+                    <div class="col-md-4 ">
                         <img src=./image/icon/icon1.png class="img-responsive" >
                     </div>
-                    <div class="col-md-8 content1" >
+                    <div class="col-md-8">
                         <br>
                         <p class="test-left text-justify head1">安全：个人专户模式</p>
                         <p class="test-left text-justify head2">美国证监会注册投资顾问</p>
@@ -177,12 +144,12 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-md-offset-0" id="card2">
+            <div class="col-md-5">
                 <div class="row">
-                    <div class="col-md-4 content2">
+                    <div class="col-md-4">
                         <img src=./image/icon/icon2.png class="img-responsive" >
                     </div>
-                    <div class="col-md-8 content2">
+                    <div class="col-md-8">
                         <br>
                         <p class="test-left text-justify head1">随投随取</p>
                         <p class="test-left text-justify head2">组合投资于规模大、流动性好的ETF资产</p>
@@ -192,16 +159,13 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <br><br><br><br>
-        </div>
-        <div class="row">
-                <div class="col-md-5 col-md-offset-1" id="card3">
+        <div class="row" style="margin:30px">
+                <div class="col-md-5 col-md-offset-1" >
                     <div class="row">
-                        <div class="col-md-4 content1">
+                        <div class="col-md-4">
                             <img src=./image/icon/icon3.png class="img-responsive" >
                         </div>
-                        <div class="col-md-8 content1">
+                        <div class="col-md-8">
                             <br>
                             <p class="test-left text-justify head1">便捷：金融科技轻松上手</p>
                             <p class="test-left text-justify head2">轻松帮你完成国内外券商开户</p>
@@ -211,12 +175,12 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-md-offset-0" id="card4">
+                <div class="col-md-5" >
                     <div class="row">
-                        <div class="col-md-4 content2">
+                        <div class="col-md-4">
                             <img src=./image/icon/icon8.png class="img-responsive" >
                         </div>
-                        <div class="col-md-8 content2">
+                        <div class="col-md-8">
                             <br>
                             <p class="test-left text-justify head1">低风险/高收益</p>
                             <p class="test-left text-justify head2">根据线代投资组合理论</p>
@@ -227,15 +191,68 @@
                 </div>
         </div>
     </div>
+    <div class="container" id="about">
+        <div class="row" style="margin-top:50px;">
+            <div class="col-md-12" style="font-size:36px;color:#264863;">
+                — About Us —
+            </div>
+        </div>
+        <div class="row">
+            <img src="./image/bear.png" class="img-responsive">
+        </div>
+    </div>
+
+    <div class="container" >
+        <div class="row" style="margin-top:50px;">
+            <div class="col-md-12" style="font-size:36px;color:#264863;">
+                <span name="contact" id="contact">— Contact Us —</span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-7">
+                <div class="row" >
+                    <div class="col-md-6">
+                        <span class="glyphicon glyphicon-envelope" style="color:#4EA8E7; font-size: 24px;margin-top:50px;"> Email</span>
+                        <p style="color:#264863;font-size: 20px;margin-top:20px;">jyzhangchn@gmail.com</p>
+                        <span class="glyphicon glyphicon-phone-alt" style="color:#4EA8E7; font-size: 22px;margin-top:50px;"> Telephone</span>
+                        <p style="color:#264863;font-size: 20px;margin-top:20px;">025-1234567</p>
+                    </div>
+                    <div class="col-md-6">
+                        <span class="glyphicon glyphicon-qrcode" style="color:#4EA8E7; font-size: 22px;margin-top:50px;"> 扫一扫，关注我们</span>
+                        <img src="./image/qrcode.png" class="img-responsive" style="margin-top:35px;margin-left:35px;" width="50%">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="glyphicon glyphicon-map-marker" style="color:#4EA8E7; font-size: 24px;margin-top:20px;"> Address</span>
+                        <p style="color: #264863;font-size: 20px;padding-top:20px">江苏省南京市栖霞区仙林大道163号南京大学仙林校区</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-5" style="padding-left:50px">
+                <img src="./image/contact.png" class="img-responsive">
+            </div>
+        </div>
+    </div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="./dist/js/bootstrap.min.js"></script>
 </body>
+
 <footer>
-    <!--<div class="foot">-->
-        <!--<a class="bg">Copyright ©2017 jyzhang</a>-->
-    <!--</div>-->
+    <nav class="navbar navbar-default navbar-static-bottom" role="navigation">
+        <div class="container-fluid">
+            <div class="row" style="padding:30px 0px;background-color: #264863;color:#ffffff;text-align: center">
+                Copyright
+                <span class="glyphicon glyphicon-copyright-mark"></span>
+                 jyzhangchn
+            </div>
+        </div>
+    </nav>
+
 </footer>
 </html>
