update some details

--- a/news.html
+++ b/news.html
@@ -66,40 +66,44 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4" style="background:#00dab9;border:solid white 5px;">
+    <div class="container" >
+        <div class="row" >
+            <div class="col-md-4 card" style="background:#00dab9;">
                 <img src="./image/icon/icon4.png" class="img-responsive" width="80%" >
-                <a class="title">This a title</a>
+                <p class="title">智能投顾:</p>
+                <p class="title">智能时代财富管理专家</p>
+                <span class="glyphicon glyphicon-time view">
+                    <a style="color:#264843">200 </a>views
+                </span>
             </div>
-            <div class="col-md-4" style="background:#CBAD8B;border:solid white 5px;">
+            <div class="col-md-4 card" style="background:#CBAD8B;">
                 <img src="./image/icon/icon10.png" class="img-responsive" width="80%" >
             </div>
-            <div class="col-md-4" style="background:#50C0EA;border:solid white 5px;">
+            <div class="col-md-4 card" style="background:#50C0EA;">
                 <img src="./image/icon/icon9.png" class="img-responsive" width="80%" >
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4" style="background:#ffb211;border:solid white 5px;">
+            <div class="col-md-4 card" style="background:#ffb211;">
                 <img src="./image/icon/icon11.png" class="img-responsive" width="80%" >
             </div>
-            <div class="col-md-8" style="background:#F47E54;border:solid white 5px;">
+            <div class="col-md-8 card" style="background:#F47E54;">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 " >
                         <img src="./image/icon/icon5.png" class="img-responsive" width="80%" >
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-8" style="background:#a3cda5;border:solid white 5px;">
+            <div class="col-md-8 card" style="background:#a3cda5;">
                 <div class="row">
                     <div class="col-md-6">
                         <img src="./image/icon/icon6.png" class="img-responsive" width="80%" >
                     </div>
                 </div>
             </div>
-            <div class="col-md-4" style="background:#b6d4d0;border:solid white 5px;">
+            <div class="col-md-4 card" style="background:#b6d4d0;">
                 <img src="./image/icon/icon7.png" class="img-responsive" width="80%" >
             </div>
         </div>
