--- a/index.html
+++ b/index.html
@@ -55,15 +55,6 @@
                                                     </div>
                                                 </div>
                                             </form>
-                                                <!--<div class="form-group">-->
-                                                    <!--<label for="confirmPassword">验证码</label>-->
-                                                    <!--<img src="./image/icon/icon1.png" class="img-responsive img-circle" alt="Cinque Terre" width="200" height="100">-->
-                                                    <!--<input type="confirmPassword" class="form-control" id="confirmPassword"/>-->
-                                                <!--</div>-->
-                                                <!--<div class="checkbox">-->
-                                                    <!--<label><input type="checkbox" />我已接受用户隐私协议</label>-->
-                                                <!--</div>-->
-
                                         </div>
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
@@ -120,14 +111,21 @@
         </div>
     </div>
 
+
+
     <div class="container">
-        <div class="row">
-            <br><br><br>
+        <div class="row" style="margin:50px 0px 30px 0px; text-align: center;">
+            <div class="col-md-4" style="color:#D1D8DD">
+            </div>
+            <div class="col-md-4" style="font-size:36px;color:#D1D8DD;font-weight: 200">
+                <span name="contact" id="contact">/   Our Strengths   /</span>
+            </div>
+            <div class="col-md-4" style="color:#D1D8DD">
+            </div>
         </div>
     </div>
-
     <div class="container-fluid">
-        <div class="row">
+        <div class="row" style="margin-bottom: 50px">
             <div class="col-md-5 col-md-offset-1" >
                 <div class="row" style="margin:30px">
                     <div class="col-md-4 ">
@@ -145,7 +143,7 @@
             </div>
 
             <div class="col-md-5">
-                <div class="row">
+                <div class="row" style="margin:30px">
                     <div class="col-md-4">
                         <img src=./image/icon/icon2.png class="img-responsive" >
                     </div>
@@ -193,7 +191,7 @@
     </div>
     <div class="container" id="about">
         <div class="row" style="margin-top:50px;">
-            <div class="col-md-12" style="font-size:36px;color:#264863;">
+            <div class="col-md-12" style="font-size:36px;color:#D1D8DD;font-weight: 200">
                 — About Us —
             </div>
         </div>
@@ -204,21 +202,21 @@
 
     <div class="container" >
         <div class="row" style="margin-top:50px;">
-            <div class="col-md-12" style="font-size:36px;color:#264863;">
+            <div class="col-md-12" style="font-size:36px;color:#D1D8DD;font-weight: 200">
                 <span name="contact" id="contact">— Contact Us —</span>
             </div>
         </div>
         <div class="row">
             <div class="col-md-7">
-                <div class="row" >
+                <div class="row">
                     <div class="col-md-6">
-                        <span class="glyphicon glyphicon-envelope" style="color:#4EA8E7; font-size: 24px;margin-top:50px;"> Email</span>
+                        <span class="glyphicon glyphicon-envelope"  style="color:#4EA8E7; font-size: 24px;margin-top:50px;"> Email</span>
                         <p style="color:#264863;font-size: 20px;margin-top:20px;">jyzhangchn@gmail.com</p>
-                        <span class="glyphicon glyphicon-phone-alt" style="color:#4EA8E7; font-size: 22px;margin-top:50px;"> Telephone</span>
+                        <span class="glyphicon glyphicon-phone-alt" style="color:#4EA8E7; font-size: 24px;margin-top:50px;"> Telephone</span>
                         <p style="color:#264863;font-size: 20px;margin-top:20px;">025-1234567</p>
                     </div>
                     <div class="col-md-6">
-                        <span class="glyphicon glyphicon-qrcode" style="color:#4EA8E7; font-size: 22px;margin-top:50px;"> 扫一扫，关注我们</span>
+                        <span class="glyphicon glyphicon-qrcode"  style="color:#4EA8E7; font-size: 24px;margin-top:50px;"> 扫一扫，关注我们</span>
                         <img src="./image/qrcode.png" class="img-responsive" style="margin-top:35px;margin-left:35px;" width="50%">
                     </div>
                 </div>
